# s.a.g.e

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .sageignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  install.ps1  install.sh  pyproject.toml  wing_config.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  decision_record.md
.github/workflows/: ci.yml  leak-guard.yml
agents/: aidev-adversarial-auditor.md  aidev-agent-creator.md  aidev-agent-designer.md  aidev-agent-manager.md  aidev-arbiter.md  aidev-claude-code-researcher.md  aidev-code-implementer.md  aidev-code-reviewer.md  aidev-eval-engineer.md  aidev-keeper.md  aidev-loop-operator.md  aidev-planner.md  aidev-skill-creator.md  aidev-state-adversarial-auditor.md  aidev-state-reviewer.md  aidev-visionary.md  arch-concept-designer.md  arch-documenter.md  arch-mep-engineer.md  arch-pdf-extractor.md  arch-planner.md  arch-spec-writer.md  arch-structural-engineer.md  arch-visionary.md  arch-visualizer.md  biz-planner.md  biz-process-builder.md  biz-process-reviewer.md  biz-visionary.md  data-cleaner.md  data-excel-architect.md  data-pivot-architect.md  data-power-query-developer.md  data-vba-developer.md  dev-architect.md  dev-browser-operator.md  dev-build-error-resolver-cpp.md  dev-build-error-resolver-django.md  dev-build-error-resolver-go.md  dev-build-error-resolver-java.md  (+59 more)
claude-md/: CLAUDE.md  forbidden-patterns-template.md  per-repo-CLAUDE-stub.md
commands/: help.md  init.md  mine.md  search.md  status.md
docs/: index.md
docs/concepts/: closets.md  format-coverage.md  mission.md  sage-persona.md  third-party-patterns.md
docs/guides/: onboarding.md  releasing.md
docs/reference/: agent-dependencies.md  agent-roster.md  commands.md  skills.md  surface.md
docs/specs/: agent-registry-protocol.md  audit-pairing-matrix.md  backlog-changelog-schema.md  manifest-schema.md  mcp-bootstrap.md  schema.sql  telemetry.md  universal-agent-constraints.md  verdict-schema.md  virtual-line-numbering.md
hooks/: hooks.json
hooks/scripts/: _session_hook.py  autonomy_reporting_eval.py  precompact.py  role_guard.py  stop.py
installer-assets/: 0000-template.md  README-claude-wakeup.md  autonomy-continuation-sessionstart.py  claude-wakeup  claude-wakeup-sessionstart.py  gen-agent-catalog.py  inject-codex-budget.py
nook-scaffold/: README.md
rules/: ai-dev-conventions.md  biz-process-conventions.md  e2e-validation-conventions.md  finance-conventions.md  memory-hygiene.md  software-dev-conventions.md
scripts/: gate_docs.py  gate_stray_work_items.py  gen_docs.py  measure_framework_surface.py
scripts/media/: build_index.py  build_manifest.py  doctor.py  extract_audio.sh  extract_frames.py  probe.py  requirements-media.in  requirements-media.txt  run.py  setup.sh  transcribe.py
skills/agent-creation/: SKILL.md
skills/audit-pairing-lookup/: SKILL.md
skills/autonomy-loop/: SKILL.md
skills/bim-visual-verification/: SKILL.md
skills/biz-sop-discipline/: SKILL.md
skills/browser-automation-discipline/: SKILL.md
skills/codex-budget/: SKILL.md
skills/codex-budget-plan-time/: SKILL.md
skills/codex-routing-reflex/: SKILL.md
skills/codex-ultra-review/: SKILL.md
skills/e2e-evidence-discipline/: SKILL.md
skills/fin-categorization-audit-discipline/: SKILL.md
skills/freecad-headless-round-trip/: SKILL.md
skills/freecad-wsl-invocation-hygiene/: SKILL.md
skills/gh-pr-review-discipline/: SKILL.md
skills/gh-scaffold-discipline/: SKILL.md
skills/gh-workflow-discipline/: SKILL.md
skills/ifc-geometry-discipline/: SKILL.md
skills/ifc-render-pipeline-discipline/: SKILL.md
skills/m-language-discipline/: SKILL.md
skills/massing-zoning-discipline/: SKILL.md
skills/media-to-manual/: SKILL.md
skills/mep-routing-discipline/: SKILL.md
skills/mid-session-checkpoint/: SKILL.md
skills/orchestrator-self-check/: SKILL.md
skills/patch-tournament/: SKILL.md
skills/pdf-vector-extraction-discipline/: SKILL.md
skills/ral-surface-style-discipline/: SKILL.md
skills/sage/: SKILL.md
skills/sandbox-isolation-protocol/: SKILL.md
skills/session-lifecycle/: SKILL.md
skills/sheet-set-assembly-discipline/: SKILL.md
skills/skill-creation/: SKILL.md
skills/skill-eval/: SKILL.md
skills/structural-design-discipline/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/vba-language-discipline/: SKILL.md
skills/verification-before-completion/: SKILL.md
src/sage_mcp/: README.md  __init__.py  __main__.py  cli.py  cli_format.py  closet_llm.py  config.py  consolidation.py  convo_miner.py  convo_scanner.py  corpus_origin.py  dashboard.py  dedup.py  diary_ingest.py  dynamics.py  embedding.py  entity_detector.py  entity_registry.py  export.py  exporter.py  fact_checker.py  format_miner.py  general_extractor.py  hallways.py  hooks_cli.py  ignore.py  instructions_cli.py  knowledge_graph.py  layers.py  llm_client.py  llm_refine.py  migrate.py  (+21 more)
statusline/: README.md
tests/: conftest.py  test_agent_catalog_generator.py  test_agent_keyed_drawers.py  test_agent_manifests.py  test_autonomy_hooks.py  test_backends.py  test_backends_registry.py  test_bootstrap.py  test_chroma_collection_lock.py  test_ci_gating.py  test_claude_plugin_hook_config.py  test_claude_wakeup.py  test_clean_lone_surrogates.py  test_cli.py  test_cli_format.py  test_closet_llm.py  test_closets.py  test_collection_metric_invariant.py  test_config.py  test_config_extra.py  test_consolidation.py  test_convo_miner.py  test_convo_miner_size_cap.py  test_convo_miner_unit.py  test_convo_scanner.py  test_corpus_origin.py  test_corpus_origin_integration.py  test_dashboard.py  test_dedup.py  test_diary_ingest.py  test_dynamics.py  test_embedding.py  test_embeddinggemma.py  test_empty_chromadb_results.py  test_entity_detector.py  test_entity_registry.py  test_export.py  test_exporter.py  test_fact_checker.py  test_format_miner.py  (+71 more)
(+97 files in other folders)
